--- a/robby.html
+++ b/robby.html
@@ -20,7 +20,25 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Haley_sdr_asrp_winncomm">1</a>]
+[<a name="McKilliam_fast_sparse_period_est_2014">1</a>]
+</td>
+<td class="bibtexitem">
+R.G. McKilliam, I.&nbsp;V.L. Clarkson, and B.G. Quinn.
+ Fast sparse period estimation.
+ <em>IEEE Signal Process. Letters</em>, 22(1):62-66, Jan. 2015.
+[&nbsp;<a href="robby_bib.html#McKilliam_fast_sparse_period_est_2014">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/LSP.2014.2345737">DOI</a>&nbsp;]
+<blockquote><font size="-1">
+Keywords: Chirp;Estimation;Fast Fourier transforms;Least squares approximations;Noise measurement;Quantization (signal);Fast Fourier Transform;period estimation
+</font></blockquote>
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Haley_sdr_asrp_winncomm">2</a>]
 </td>
 <td class="bibtexitem">
 David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Marc
@@ -38,7 +56,7 @@ David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Ma
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Kodithuwakku_tcomms_2014">2</a>]
+[<a name="Kodithuwakku_tcomms_2014">3</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
@@ -53,7 +71,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_mckilliam_crb_cpm_2013">3</a>]
+[<a name="Pollok_mckilliam_crb_cpm_2013">4</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -72,7 +90,7 @@ Keywords: Accuracy;Estimation;Modulation;Noise;Polynomials;Satellites;Vectors;Co
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6510040">4</a>]
+[<a name="6510040">5</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -91,7 +109,50 @@ Keywords: Monte Carlo methods;code division multiple access;decoding;interferenc
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_2012">5</a>]
+[<a name="asrp_multiacess_world_patent">6</a>]
+</td>
+<td class="bibtexitem">
+A.&nbsp;Grant, D.&nbsp;Haley, R.&nbsp;G. McKilliam, W.&nbsp;G. Cowley, and T.&nbsp;Chan.
+ Multi-access communication system.
+ World patent WO2013AU01079, 2013.
+[&nbsp;<a href="robby_bib.html#asrp_multiacess_world_patent">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="asrp_comm_sys_and_method_world_patent">7</a>]
+</td>
+<td class="bibtexitem">
+D.&nbsp;Haley, J.&nbsp;Buetefuer, A.&nbsp;Grant, W.&nbsp;Cowley, G.&nbsp;Lechner, I.&nbsp;R. Land, R.&nbsp;G.
+  McKilliam, A.&nbsp;Pollok, L.&nbsp;M. Davis, R.&nbsp;R. Luppino, and A.&nbsp;Barbulescu.
+ Communication system and method.
+ World patent WO2013AU01078, 2013.
+[&nbsp;<a href="robby_bib.html#asrp_comm_sys_and_method_world_patent">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="asrp_channel_allocation_world_patent">8</a>]
+</td>
+<td class="bibtexitem">
+A.&nbsp;Grant, D.&nbsp;Haley, D.&nbsp;Lawrie, R.&nbsp;G. McKilliam, W.&nbsp;Cowley, and L.&nbsp;M. Davis.
+ Multi-access communication system.
+ World patent WO2013AU00895, 2013.
+[&nbsp;<a href="robby_bib.html#asrp_channel_allocation_world_patent">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_asrp_phase_2012">9</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechner, I.&nbsp;Land, R.&nbsp;G.
@@ -106,7 +167,7 @@ A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechne
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_patent_2012">6</a>]
+[<a name="McKilliam_asrp_phase_patent_2012">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
@@ -121,12 +182,12 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_closest_point_lattice_first_kind_2014">7</a>]
+[<a name="McKilliam_closest_point_lattice_first_kind_2014">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Grant, and I.&nbsp;V.&nbsp;L. Clarkson.
  Finding a closest point in a lattice of Voronoi's first kind.
- under review SIAM J. Discrete Math., 2014.
+ accepted to SIAM J. Discrete Math., Jul. 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;]
 
 </td>
@@ -135,7 +196,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Grant, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_McKilliam_crb_cpm_2014">8</a>]
+[<a name="Pollok_McKilliam_crb_cpm_2014">12</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -150,7 +211,7 @@ A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_Pollock_CRB_polyphase_2013">9</a>]
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam and A.&nbsp;Pollok.
@@ -165,7 +226,7 @@ R.&nbsp;McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">10</a>]
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -180,7 +241,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">11</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
@@ -195,7 +256,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_time_offset_pilots_data_2013">12</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and W.&nbsp;Cowley.
@@ -214,7 +275,7 @@ Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Sign
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">13</a>]
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -233,7 +294,7 @@ Keywords: Noncoherent detection;asymptotic statistics;phase shift keying
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_multiple_sparse_noisy_SSP_2014">14</a>]
+[<a name="Quinn_multiple_sparse_noisy_SSP_2014">18</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -249,7 +310,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">15</a>]
+[<a name="Quinn_sparse_noisy_SSP_2012">19</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -265,7 +326,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">16</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -284,7 +345,7 @@ Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;po
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">17</a>]
+[<a name="McKilliam_error_prob_An2012">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -299,7 +360,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">18</a>]
+[<a name="McKilliam_direstcro_dasp_2011">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -313,7 +374,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">19</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">23</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -330,7 +391,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">20</a>]
+[<a name="McKilliam2007">24</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -346,7 +407,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">21</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">25</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -362,7 +423,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">22</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">26</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -377,7 +438,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">23</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">27</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -393,7 +454,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6363913">24</a>]
+[<a name="6363913">28</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -413,7 +474,7 @@ Keywords: Monte Carlo methods;channel coding;code division multiple access;inter
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn20013asilomar_period_est">25</a>]
+[<a name="Quinn20013asilomar_period_est">29</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -429,7 +490,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">26</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">30</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -444,7 +505,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">27</a>]
+[<a name="McKilliam2006">31</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -459,7 +520,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">28</a>]
+[<a name="McKilliam2008">32</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -475,7 +536,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">29</a>]
+[<a name="McKilliam2008b">33</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -491,7 +552,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">30</a>]
+[<a name="McKilliam2008a">34</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -508,7 +569,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">31</a>]
+[<a name="McKilliam2009CoxeterLattices">35</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -526,7 +587,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">32</a>]
+[<a name="McKilliam2010thesis">36</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -541,7 +602,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">33</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">37</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -562,7 +623,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">34</a>]
+[<a name="Quinn2008maximizing_the_periodogram">38</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -580,7 +641,7 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_pps_unwrapping_tsp_2014">35</a>]
+[<a name="McKilliam_pps_unwrapping_tsp_2014">39</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
@@ -598,7 +659,7 @@ Keywords: Lattices;Least squares approximations;Phase estimation;Polynomials;Sig
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">36</a>]
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">40</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
