added to sands html

--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -38,7 +38,7 @@ Lecture notes and corresponding software will be added to this website as the co
 <td>
 <a href="http://robbymckilliam.github.io/signalsandsystems/2014/signalsandsystems.pdf">Lecture notes</a></td>
 <td>
-<a href="http://robbymckilliam.github.io/signalsandsystems/2013/test.zip">Software</a>
+<a href="http://robbymckilliam.github.io/signalsandsystems/2014/test.zip">Software</a>
 </td>
 </tr>
 <tr valign="top", align="left">
@@ -64,6 +64,9 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2013/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec1.mp4">3.1 Convolution, regular systems and the delta ''function''</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec2.mp4">3.2 Properties of convolution</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec3.mp4">3.3 Linear combining and composition</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec4.mp4">3.4 Eigenfunctions and the transfer function</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec5.mp4">3.5 The spectrum </a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec1.mp4">4 The Laplace transform </a><br>
 </tr>
 
 </table>
