--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -35,11 +35,8 @@ Lecture notes and corresponding software will be added to this website as the co
 <br>
 <table cellpadding="10" cellspacing="5" width="700">
 <tr valign="top", align="left">
-<td>
-<a href="http://robbymckilliam.github.io/signalsandsystems/2014/signalsandsystems.pdf">Lecture notes</a></td>
-<td>
-<a href="http://robbymckilliam.github.io/signalsandsystems/2014/test.zip">Software</a>
-</td>
+<td><a href="http://robbymckilliam.github.io/signalsandsystems/2014/signalsandsystems.pdf">Lecture notes</a></td>
+<td><a href="http://robbymckilliam.github.io/signalsandsystems/2014/test.zip">Software</a></td>
 </tr>
 <tr valign="top", align="left">
 <td>
