--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -33,9 +33,11 @@ Lecture notes and corresponding software will be added to this website as the co
 <!-- CONTENT GOES HERE -->
 
 <br>
-<table cellpadding="10" cellspacing="5" width="700">
+<table cellpadding="5" cellspacing="2" width="700">
 <tr valign="top", align="left">
-<td><a href="http://robbymckilliam.github.io/signalsandsystems/2014/signalsandsystems.pdf">Lecture notes</a></td>
+<td>
+<a href="http://robbymckilliam.github.io/signalsandsystems/2014/signalsandsystems.pdf">Lecture notes</a>
+&nbsp;<a href="http://robbymckilliam.github.io/signalsandsystems/2014/signalsandsystemswithsolns.pdf">(with solutions)</a></td>
 <td><a href="http://robbymckilliam.github.io/signalsandsystems/2014/test.zip">Software</a></td>
 </tr>
 <tr valign="top", align="left">
