--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -64,8 +64,11 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2013/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec2.mp4">3.2 Properties of convolution</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec3.mp4">3.3 Linear combining and composition</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec4.mp4">3.4 Eigenfunctions and the transfer function</a><br>
-<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec5.mp4">3.5 The spectrum </a><br>
-<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec1.mp4">4 The Laplace transform </a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec5.mp4">3.5 The spectrum</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec1.mp4">4 The Laplace transform</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec1a.mp4">4.1 The transfer function and the Laplace transform</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec2.mp4">4.2 Solving differential equations</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec3.mp4">4.3 First order systems</a><br>
 </tr>
 
 </table>
