--- a/robby.html
+++ b/robby.html
@@ -300,9 +300,10 @@ Keywords: Noncoherent detection;asymptotic statistics;phase shift keying
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
  On the periodogram estimators of periods from interleaved sparse,
   noisy timing data.
- accepted to IEEE Statistical Signal Processing Workshop (SSP),
-  Jul. 2014.
-[&nbsp;<a href="robby_bib.html#Quinn_multiple_sparse_noisy_SSP_2014">bib</a>&nbsp;]
+ In <em>IEEE Statistical Signal Processing Workshop</em>, pages
+  232-235, Gold Coast, Australia, Jul. 2014.
+[&nbsp;<a href="robby_bib.html#Quinn_multiple_sparse_noisy_SSP_2014">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/SSP.2014.6884618">DOI</a>&nbsp;]
 
 </td>
 </tr>
