--- a/robby_bib.html
+++ b/robby_bib.html
@@ -222,12 +222,15 @@
 </pre>
 
 <a name="Quinn_multiple_sparse_noisy_SSP_2014"></a><pre>
-@unpublished{<a href="robby.html#Quinn_multiple_sparse_noisy_SSP_2014">Quinn_multiple_sparse_noisy_SSP_2014</a>,
+@inproceedings{<a href="robby.html#Quinn_multiple_sparse_noisy_SSP_2014">Quinn_multiple_sparse_noisy_SSP_2014</a>,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  note = {accepted to {IEEE} Statistical Signal Processing Workshop {(SSP)}},
+  booktitle = {{IEEE} Statistical Signal Processing Workshop},
   title = {On the periodogram estimators of periods from interleaved sparse, noisy timing data},
   year = 2014,
-  month = {Jul.}
+  month = {Jul.},
+  pages = {232-235},
+  doi = {10.1109/SSP.2014.6884618},
+  address = {Gold Coast, Australia}
 }
 </pre>
 
