added details for first kind paper

--- a/robby.html
+++ b/robby.html
@@ -185,11 +185,11 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 [<a name="McKilliam_closest_point_lattice_first_kind_2014">11</a>]
 </td>
 <td class="bibtexitem">
-R.&nbsp;G. McKilliam, A.&nbsp;Grant, and I.&nbsp;V.&nbsp;L. Clarkson.
+R.&nbsp;McKilliam, A.&nbsp;Grant, and I.&nbsp;Clarkson.
  Finding a closest point in a lattice of Voronoi's first kind.
- accepted to SIAM J. Discrete Math., Jul. 2014.
-[&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;]
-
+ <em>SIAM Journal on Discrete Mathematics</em>, 28(3):1405-1422, 2014.
+[&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1137/140952806">DOI</a>&nbsp;]
 </td>
 </tr>
 
