--- a/robby_bib.html
+++ b/robby_bib.html
@@ -132,12 +132,15 @@
 </pre>
 
 <a name="McKilliam_closest_point_lattice_first_kind_2014"></a><pre>
-@unpublished{<a href="robby.html#McKilliam_closest_point_lattice_first_kind_2014">McKilliam_closest_point_lattice_first_kind_2014</a>,
-  author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
-  note = {accepted to {SIAM J. Discrete Math.}},
-  title = {Finding a closest point in a lattice of {Voronoi's} first kind},
-  month = {Jul.},
-  year = 2014
+@article{<a href="robby.html#McKilliam_closest_point_lattice_first_kind_2014">McKilliam_closest_point_lattice_first_kind_2014</a>,
+  author = {McKilliam, R. and Grant, A. and Clarkson, I.},
+  title = {Finding a Closest Point in a Lattice of {Voronoi's} First Kind},
+  journal = {{SIAM} Journal on Discrete Mathematics},
+  volume = 28,
+  number = 3,
+  pages = {1405-1422},
+  year = 2014,
+  doi = {10.1137/140952806}
 }
 </pre>
 
