--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -67,6 +67,8 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2014/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec1a.mp4">4.1 The transfer function and the Laplace transform</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec2.mp4">4.2 Solving differential equations</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec3.mp4">4.3 First order systems</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec4.mp4">4.4 Second order systems</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec5.mp4">4.5 Poles, zeros, and stability</a><br>
 </tr>
 
 </table>
