--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -69,6 +69,9 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2014/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec3.mp4">4.3 First order systems</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec4.mp4">4.4 Second order systems</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch4sec5.mp4">4.5 Poles, zeros, and stability</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec0.mp4">5 The Fourier transform</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec1.mp4">5.1 The inverse transform and the Plancherel theorem</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec2.mp4">5.2 Analogue Fiters</a><br>
 </tr>
 
 </table>
