added to sands html

--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -72,6 +72,10 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2014/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec0.mp4">5 The Fourier transform</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec1.mp4">5.1 The inverse transform and the Plancherel theorem</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec2.mp4">5.2 Analogue Fiters</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec3.mp4">5.3 Real and complex valued sequences</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec4.mp4">5.4 Bandlimited signals</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec5.mp4">5.5 The discrete time Fourier transform</a><br>
+<a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec6.mp4">5.6 The fast Fourier transform</a><br>
 </tr>
 
 </table>
