--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -60,7 +60,7 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2014/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec1.mp4">2.1 Passive electrical circuits</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec2.mp4">2.2 Active electrical circuits</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch2sec4.mp4">2.4 Direct current motors</a><br>
-3 Linear time invariant systems
+3 Linear time invariant systems<br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec1.mp4">3.1 Convolution, regular systems and the delta ''function''</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec2.mp4">3.2 Properties of convolution</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch3sec3.mp4">3.3 Linear combining and composition</a><br>
@@ -79,7 +79,7 @@ Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2014/marks.csv
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec4.mp4">5.4 Bandlimited signals</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec5.mp4">5.5 The discrete time Fourier transform</a><br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch5sec6.mp4">5.6 The fast Fourier transform</a><br>
-6 Discrete time systems
+6 Discrete time systems<br>
 <a href="http://www.itr.unisa.edu.au/itrusers/mckillrg/public_html/videos/lectures/signalsandsystems2014/ch6sec1.mp4">6.1 The discrete time impulse response</a><br>
 </tr>
 
