--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -44,8 +44,11 @@ Lecture notes and corresponding software will be added to this website as the co
 <td>
 Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/2014/practical.pdf">practical</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2014/theoryassignment.pdf">theory</a>
 </td>
-<td>
+<!-- <td>
 Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/2014/marks.csv">marks</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2014/markstats.pdf">stats</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2014/stats.R">R</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2014/top10.pdf">top 10</a>
+</td> -->
+<td>
+<a href="http://robbymckilliam.github.io/signalsandsystems/2014/markstats.pdf">stats</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/2014/top10.pdf">top 10</a>
 </td>
 </tr>
 
